--- a/src/assets/components/home/navbar/Navbar.css
+++ b/src/assets/components/home/navbar/Navbar.css
@@ -1,47 +1,28 @@
 .navbar {
-    background-color: #333;
-    color: #fff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-  }
-  
-  .titulo{
-    font-size: 1.2rem;
-    font-weight: bold;
-    color: #fff;
-    padding-left: 10px;
-    font-weight: 200;
+  background-color: #333;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
 }
-button{
-    background-color: #333;
-    color: aliceblue;
-    border: solid rgb(79, 155, 160) 0.3px;
+
+.titulo {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #fff;
+  padding-left: 10px;
+  font-weight: 200;
 }
-  
-  .nav-links {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-  }
-  
-  .nav-links li {
-    margin-right: 15px;
-  }
-  
-  .nav-links a {
-    text-decoration: none;
-    color: inherit;
-  }
-  
-  .total {
-    font-weight: bold;
-    font-weight: 200;
-    padding: 5px;
-    border: solid rgb(35, 86, 228) 0.1px;
-  }
- .cerca{
-    margin-right: 750px;
- }
+
+.nav-links {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 20px;
+}
+
+.nav-links li {
+  margin-right: 10px;
+}
