--- a/src/assets/components/home/navbar/Navbar.css
+++ b/src/assets/components/home/navbar/Navbar.css
@@ -4,15 +4,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  padding: 10px 15px; 
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); 
 }
 
 .titulo {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   font-weight: bold;
-  color: #fff;
+  color: #d67575;
   padding-left: 10px;
-  font-weight: 200;
+  font-family: 'Montserrat', sans-serif; 
 }
 
 .nav-links {
@@ -25,4 +26,15 @@
 
 .nav-links li {
   margin-right: 10px;
+}
+
+.nav-links a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease-in-out; 
+}
+
+.nav-links a:hover {
+  color: #f0f0f0;
 }
